# devenv_python

./: .gitignore  README.md  devenv.nix  pyproject.toml
.github/workflows/: devenv_test.yml
src/: my_file.py
